--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,16 +6,20 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="de.xwes.meinverein.main.view.SearchResultsActivity">
 
     <TextView
-        android:id="@+id/teamname"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="24dp"
+        android:text="@string/search_result"/>
     <ListView
         android:id="@+id/search_results"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        </ListView>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
 
-</RelativeLayout>
+    </ListView>
+
+</LinearLayout>
