--- a/app/src/main/res/layout/activity_games_overview.xml
+++ b/app/src/main/res/layout/activity_games_overview.xml
@@ -7,11 +7,36 @@
     android:orientation="vertical"
     tools:context="de.xwes.meinverein.main.view.GamesOverviewActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="24dp"
-        android:text="@string/games_overview"/>
+        android:orientation="horizontal"
+        android:layout_marginBottom="20dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:text="@string/date"
+            android:textSize="24dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:text="@string/gegner"
+            android:textSize="24dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:gravity="right"
+            android:text="@string/ergebnis"
+            android:textSize="24dp"/>
+    </LinearLayout>
 
     <ListView
         android:id="@+id/games_overview_list"
