--- a/app/src/main/res/layout/game_overview.xml
+++ b/app/src/main/res/layout/game_overview.xml
@@ -36,7 +36,8 @@
             android:textSize="20dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:layout_width="wrap_content"
+            android:gravity="right"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         </LinearLayout>
 
