--- a/app/src/main/res/layout/activity_games_overview.xml
+++ b/app/src/main/res/layout/activity_games_overview.xml
@@ -1,7 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
@@ -11,11 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="20dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:text="@string/date"
             android:textSize="24dp"/>
@@ -23,7 +25,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="10dp"
+            android:paddingLeft="10dp"
             android:layout_marginRight="5dp"
             android:text="@string/gegner"
             android:textSize="24dp"/>
@@ -32,7 +35,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
             android:gravity="right"
             android:text="@string/ergebnis"
             android:textSize="24dp"/>
@@ -40,7 +42,8 @@
 
     <ListView
         android:id="@+id/games_overview_list"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
+        style="@style/ListView"
         android:layout_height="match_parent">
 
         </ListView>
