--- a/app/src/main/res/layout/game_overview.xml
+++ b/app/src/main/res/layout/game_overview.xml
@@ -16,8 +16,8 @@
             android:id="@+id/datum"
             android:text="11.1.11"
             android:textSize="20dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:paddingLeft="16dp"
+            android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -35,7 +35,7 @@
             android:text="1:1"
             android:textSize="20dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:paddingRight="16dp"
             android:gravity="right"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
