--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,5 +2,8 @@
 <resources>
     <item name="red" type="color">#b22222</item>
     <item name="background" type="color">#f5f5f5</item>
-    <item name="textColor" type="color">#696969</item>
+
+    <color name="primary_dark">#1a237e</color>
+    <color name="accent">#ffee58</color>
+    <color name="textColor">#000000</color>
 </resources>
