--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -17,6 +17,7 @@
     <ListView
         android:id="@+id/search_results"
         android:layout_width="match_parent"
+        style="@style/ListView"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp">
 
