--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -4,6 +4,6 @@
     <item name="background" type="color">#f5f5f5</item>
 
     <color name="primary_dark">#1a237e</color>
-    <color name="accent">#ffee58</color>
+    <color name="accent">#1a237e</color>
     <color name="textColor">#000000</color>
 </resources>
