--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
 
         <EditText
             android:id="@+id/search_input"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:textColor="@color/textColor"
             android:layout_height="wrap_content" />
@@ -33,6 +34,7 @@
             android:layout_gravity="center"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
+            android:layout_marginTop="10dp"
             android:textSize="24sp"
             android:background="#ffffff"
             android:text="@string/search_team" />
